register route update
